// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client"
  output   = "./generated"
}

datasource db {
  provider = "postgresql"
}

model User {
  id          String     @id @default(uuid())
  email       String     @unique
  username    String     @unique
  passwordHash String
  createdAt   DateTime   @default(now())
  portfolio   Portfolio?
}

model Portfolio {
  id           String              @id @default(uuid())
  userId       String              @unique
  cashBalance  Decimal             @default(10000.00)
  createdAt    DateTime            @default(now())
  user         User                @relation(fields: [userId], references: [id])
  transactions Transaction[]
  assets       PortfolioAsset[]
  history      PortfolioHistory[]
}

model Asset {
  id          String           @id @default(uuid())
  symbol      String           @unique
  name        String
  description String?
  lastPrice   Decimal
  updatedAt   DateTime         @default(now())
  prices      AssetPrice[]
  transactions Transaction[]
  portfolioAssets PortfolioAsset[]
}

model Transaction {
  id           String     @id @default(uuid())
  portfolioId  String
  assetId      String
  type         TransactionType
  quantity     Decimal
  price        Decimal
  createdAt    DateTime @default(now())
  portfolio    Portfolio @relation(fields: [portfolioId], references: [id])
  asset        Asset     @relation(fields: [assetId], references: [id])
}

enum TransactionType {
  buy
  sell
}

model PortfolioAsset {
  id              String    @id @default(uuid())
  portfolioId     String
  assetId         String
  quantity        Decimal
  averageBuyPrice Decimal
  createdAt       DateTime  @default(now())
  updatedAt       DateTime  @default(now())
  portfolio       Portfolio @relation(fields: [portfolioId], references: [id])
  asset           Asset     @relation(fields: [assetId], references: [id])
  @@unique([portfolioId, assetId])
}

model AssetPrice {
  id          String   @id @default(uuid())
  assetId     String
  price       Decimal
  recordedAt  DateTime @default(now())
  asset       Asset    @relation(fields: [assetId], references: [id])
  @@unique([assetId, recordedAt])
}

model PortfolioHistory {
  id           String    @id @default(uuid())
  portfolioId  String
  totalValue   Decimal
  cashBalance  Decimal
  recordedAt   DateTime  @default(now())
  portfolio    Portfolio @relation(fields: [portfolioId], references: [id])
  @@unique([portfolioId, recordedAt])
}

